add new functions to auth service

--- a/src/app/features/auth/forget-password/forget-password.component.html
+++ b/src/app/features/auth/forget-password/forget-password.component.html
@@ -8,7 +8,7 @@
                     <div class="row gy-3">
                       <div class="col-12">
                         <div class="d-flex flex-column">
-                          <span class="fw-semibold fs-4 mb-2">{{"Reset Password" | translate}}</span>
+                          <span class="fw-semibold fs-4 mb-2">{{"Forget Password" | translate}}</span>
                           <span class="small">{{"Enter your registered email address to receive a password reset link." | translate}}</span>
                       </div>
                       </div>
@@ -25,7 +25,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: '',
+                        errorMessage: mailError,
                         enableFocusBlurTracking: false,
                       }"
                       #mail
