--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -26,7 +26,7 @@
                           hideLabel: false,
                           inputGroup: false,
                           clickMessage: '',
-                          errorMessage: userEmailError,
+                          errorMessage: errors.userEmail,
                           enableFocusBlurTracking: false,
                         }"
                         #userEmail
@@ -47,7 +47,7 @@
                           hideLabel: false,
                           inputGroup: false,
                           clickMessage: '',
-                          errorMessage:passwordError,
+                          errorMessage:errors.password,
                           enableFocusBlurTracking: false,
                         }"
                         #password
