--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -23,7 +23,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: userNameError,
+                        errorMessage: errors['userName'],
                         enableFocusBlurTracking: false,
                       }"
                       #userName
@@ -44,7 +44,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: mailError,
+                        errorMessage: errors['email'],
                         enableFocusBlurTracking: false,
                       }"
                       #mail
@@ -65,7 +65,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: phoneError,
+                        errorMessage: errors['phone'],
                         enableFocusBlurTracking: false,
                       }"
                       #phone
@@ -86,7 +86,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: passwordError,
+                        errorMessage: errors['password'],
                         enableFocusBlurTracking: false,
                       }"
                       #password
