--- a/src/app/features/auth/reset-password/reset-password.component.html
+++ b/src/app/features/auth/reset-password/reset-password.component.html
@@ -25,7 +25,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: passwordError,
+                        errorMessage: errors.newPassword,
                         enableFocusBlurTracking: false,
                       }"
                       #newPassword
@@ -46,7 +46,7 @@
                         hideLabel: false,
                         inputGroup: false,
                         clickMessage: '',
-                        errorMessage: confirmPasswordError,
+                        errorMessage: errors.confirmPassword,
                         enableFocusBlurTracking: false,
                       }"
                       #confirmPassword
